Basic polling support

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 * Multiplayer
-  * Polling
+  * Fix polling on login/load etc...
+  * Fix session abort resource freeing
 * Finish buy/sell UI
 * Make it pretty
