Added brief structure/headers

--- a/report/report.tex
+++ b/report/report.tex
@@ -32,20 +32,16 @@
 
 \maketitle
 
-\clearpage
-
-\tableofcontents
-
-\clearpage
-
-%\include{Part1}
-
-%\begin{figure}[h]
-%\begin{center}
-%\includegraphics[width = 0.25\textwidth]{Pictures/Synth/Clock}
-%\caption{Circuit Diagram Of The RC Clock}
-%\end{center}
-%\end{figure}
+\section{Introduction}
+  % Brief rundown of the spec
+\section{Concept}
+  % Brief explanation of the game
+\section{Frontend}
+  % How this work
+\section{Backend}
+  % How that work
+\section{Conclusion}
+  % Wrap up, reiterate all the above in short
 
 \end{document}
 
