My stuff now 80 char/line limited

--- a/report/report.tex
+++ b/report/report.tex
@@ -41,11 +41,26 @@
   \subsection{Renderer}
     \subsubsection{Choice of Technology}
       \begin{flushleft}
-        There are a variety of technologies for browser-based rendering. The most obvious is Adobe Flash, as well Microsoft's Silverlight. However, while these are powerful tools with a wide selection of libraries and well-trodden paths for development, neither are universally cross platform, and Silverlight is not supported by the version of Firefox on the test machines.
+        There are a variety of technologies for browser-based rendering. The
+        most obvious is Adobe Flash, as well Microsoft's Silverlight. However,
+        while these are powerful tools with a wide selection of libraries and
+        well-trodden paths for development, neither are universally cross
+        platform, and Silverlight is not supported by the version of Firefox
+        on the test machines.
 
-        For handling the rendering with just HTML and Javascript, one method is to render by manipulating the DOM\footnote{Document Object Model}, and there are a few libraries for writing renderers using this method. However, DOM manipulation can suffer performance issues, particularly where there are many elements being drawn.
+        For handling the rendering with just HTML and Javascript, one method is
+        to render by manipulating the DOM\footnote{Document Object Model}, and
+        there are a few libraries for writing renderers using this method.
+        However, DOM manipulation can suffer performance issues, particularly
+        where there are many elements being drawn.
 
-        Canvas is a relatively new technology, introduced with HTML5. It allows for procedurally drawing directly to an image with Javascript, and is supported by Gecko, WebKit (including mobile versions) and, from version 9, Internet Explorer. There aren't many libraries available for it, and those that are aren't mature or well documented. However, canvas itself has sufficient framework for 2D sprite drawing, and I took this as a chance to learn through my own experience how a 2D renderer can be made.
+        Canvas is a relatively new technology, introduced with HTML5. It allows
+        for procedurally drawing directly to an image with Javascript, and is
+        supported by Gecko, WebKit (including mobile versions) and, from version
+        9, Internet Explorer. There aren't many libraries available for it, and
+        those that are aren't mature or well documented. However, canvas itself
+        has sufficient framework for 2D sprite drawing, and I took this as a
+        chance to learn through my own experience how a 2D renderer can be made.
       \end{flushleft}
 
     % Combined actor/data, progression from separate to needing them combined
@@ -54,9 +69,20 @@
     % Alternate ideas
     \subsubsection{Implementation}
       \begin{flushleft}
-        The render initializes by setting up the canvas element and render context, loading map data from the server, using that to generate a background image and place any scenery sprites (eg, shops). It then centers the view, adds an input handler, before starting the render loop.
+        The render initializes by setting up the canvas element and render
+        context, loading map data from the server, using that to generate a
+        background image and place any scenery sprites (eg, shops). It then
+        centers the view, adds an input handler, before starting the render
+        loop.
 
-        The field in the background is procedurally generated, being a different image each time the page is loaded. Pixels are a random color, weighted toward being a light green. Originally, I tried to have each pixel in the map generated uniquely, but this was very CPU intensive, causing the page to hang, or even crash. To remedy this, instead it generates a set of temporary smaller canvas tiles and uses those to build the larger background, which is considerably more performant.
+        The field in the background is procedurally generated, being a
+        different image each time the page is loaded. Pixels are a random
+        color, weighted toward being a light green. Originally, I tried to have
+        each pixel in the map generated uniquely, but this was very CPU
+        intensive, causing the page to hang, or even crash. To remedy this,
+        instead it generates a set of temporary smaller canvas tiles and uses
+        those to build the larger background, which is considerably more
+        performant.
       \end{flushleft}
   \subsection{Netcode}
     \begin{flushleft}
