vague 'lol, conclusion'

--- a/report/report.tex
+++ b/report/report.tex
@@ -170,6 +170,10 @@
 
 \section{Conclusion}
   % Wrap up, reiterate all the above in short
+  \begin{flushleft}
+    While we did not acomplish everything we set out to do, we were for the
+    most part successful, and with extra time could have accomplished more. 
+  \end{flushleft}
 
 \end{document}
 
