Beginnings of a concepts list

--- a/report/report.tex
+++ b/report/report.tex
@@ -36,6 +36,13 @@
   % Brief rundown of the spec
 \section{Concept}
   % Brief explanation of the game
+  \begin{itemize}
+    \item Crossplatform
+    \item Multiple maps with teleport between them
+    \item PvE and PvP\footnote{Player vs Environment, Player vs Player} combat
+    \item A dynamic economy where the value of an item is related to its rarity
+  \end{itemize}
+
 \section{Frontend}
   % How this work
   \subsection{Renderer}
@@ -63,10 +70,6 @@
         chance to learn through my own experience how a 2D renderer can be made.
       \end{flushleft}
 
-    % Combined actor/data, progression from separate to needing them combined
-    % Render loop
-    % Various efficiency hacks
-    % Alternate ideas
     \subsubsection{Implementation}
       \begin{flushleft}
         The render initializes by setting up the canvas element and render
