--- a/report/report.tex
+++ b/report/report.tex
@@ -34,13 +34,55 @@
 
 \section{Introduction}
   % Brief rundown of the spec
+The purpose of this exercise was to gain experience with web programming, 
+with running server and client side testing,  and with use of a database, 
+all for the purpose of making a multi user program. Specifically,  
+this program was a space trading game.  Whilst we stuck with the essence
+of this program,  we made a few changes in areas in which we felt we could
+improve the core game.
 \section{Concept}
   % Brief explanation of the game
+  The primary idea of the game was to be a trading game,  as in the original 
+spec. We felt that this was a good model for a game,  but we decided to make 
+some key changes.  
   \begin{itemize}
     \item Crossplatform
-    \item Multiple maps with teleport between them
-    \item PvE and PvP\footnote{Player vs Environment, Player vs Player} combat
+      A crossplatform game has several advantages. It can be played by players
+      on any machine, increasing potential audience by a reasonable factor. It
+      also allows for testing and development to be done on any platform, which
+      certainly makes development easier.  
+
+    \item Multiple maps with a means of teleporting between them
+      Multiple maps with single points of access allow interesting modifications
+      to core gameplay to be made in cetain zones.  Because seperate maps form
+      distinct environments,  they can justifiably (in an in-game sense) have
+      different enemies,  different items in their shops,  and even allow certain
+      things that could not be implemented on a universal scale,  such as free
+      for all PvP (see next section), or co-operative PvE (see next section).
+      Although we did not have this implemented at the time this report was
+      written, we would like to have a working prototype of it for the presentation.
+
+    \item PvE and PvP\footnote{Player versus Environment, Player versus Player} interaction
+      The main selling point of all multiplayer games is the fact that the player can
+      interact with others.  Player versus Player (PvP) interaction in any game generally 
+      consists of either combat or trade.  We chose to implement both,  and players can
+      attack each other as they wish.  There is currently nothing to gain
+      from combat,  except for preventing other players from logging their character
+      in once dead which has its appeal to certain players.  Players cannot trade
+      directly, but the game economy is a dynamic one,  and one player purchasing all
+      of a resource will cause a shortage of that resource for a period of time.
+
     \item A dynamic economy where the value of an item is related to its rarity
+      To provide some concept of a goal,  and as an alternative to destroying
+      other people's characters,  players can buy and sell resources.  The system 
+      is not zero sum\footnote{There is not a fixed amount of gold in the economy}, and
+      so players have the opportunity to make money. To prevent this aspect of the game
+      being about more than making round trips between two points where there 
+      is a fixed discrepancy between item values,  item stocks and values fluctuate over time,
+      modified by various factors,  such as the map the shop is on,  the amount of stock
+      held at a time,  and any other reasonable thing we can think of.
+
+
   \end{itemize}
 
 \section{Frontend}
