some conclusion crap

--- a/report/report.tex
+++ b/report/report.tex
@@ -176,6 +176,20 @@
   \begin{flushleft}
     While we did not acomplish everything we set out to do, we were for the
     most part successful, and with extra time could have accomplished more. 
+
+    For example, the multiple maps with teleporting feature was not implemented
+    by the time the report was written, although the database framework for it
+    exists. 
+
+    The combat provided is highly simplistic, just deducting your `shelf' from
+    their health. However, as with maps, the framework is there and is easily
+    extended to include item/wealth drops, weapons of different ranges, and so
+    on.
+
+    Also, the game is not terribly pretty. This is entirely down to the lack of
+    artistic skills on the team. We tried more detailed 32px sprites. They
+    looked shit. Then again, Minecraft only has 16px textures, and that's hella
+    popular, so the masses clearly love it.
   \end{flushleft}
 
 \end{document}
