Made item headings work

--- a/report/report.tex
+++ b/report/report.tex
@@ -46,13 +46,13 @@ improve the core game.
 spec. We felt that this was a good model for a game,  but we decided to make 
 some key changes.  
   \begin{itemize}
-    \item Crossplatform
+    \item Crossplatform\\
       A crossplatform game has several advantages. It can be played by players
       on any machine, increasing potential audience by a reasonable factor. It
       also allows for testing and development to be done on any platform, which
       certainly makes development easier.  
 
-    \item Multiple maps with a means of teleporting between them
+    \item Multiple maps with a means of teleporting between them\\
       Multiple maps with single points of access allow interesting modifications
       to core gameplay to be made in cetain zones.  Because seperate maps form
       distinct environments,  they can justifiably (in an in-game sense) have
@@ -62,7 +62,8 @@ some key changes.
       Although we did not have this implemented at the time this report was
       written, we would like to have a working prototype of it for the presentation.
 
-    \item PvE and PvP\footnote{Player versus Environment, Player versus Player} interaction
+    \item PvE and PvP\footnote{Player versus Environment, Player versus Player}
+    interaction\\
       The main selling point of all multiplayer games is the fact that the player can
       interact with others.  Player versus Player (PvP) interaction in any game generally 
       consists of either combat or trade.  We chose to implement both,  and players can
@@ -72,7 +73,8 @@ some key changes.
       directly, but the game economy is a dynamic one,  and one player purchasing all
       of a resource will cause a shortage of that resource for a period of time.
 
-    \item A dynamic economy where the value of an item is related to its rarity
+    \item A dynamic economy where the value of an item is related to its
+    rarity\\
       To provide some concept of a goal,  and as an alternative to destroying
       other people's characters,  players can buy and sell resources.  The system 
       is not zero sum\footnote{There is not a fixed amount of gold in the economy}, and
