--- a/report/report.tex
+++ b/report/report.tex
@@ -152,6 +152,13 @@ which will hopefully draw more users in. The flipside of this is that automated 
 so the game may be open to abuse, particularly as all players can send and view chat.
 \end{flushleft}
 
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width = 0.95\textwidth]{screeny}
+\caption{Screenshot of the game interface}
+\end{center}
+\end{figure}
+
   \subsection{Network}
     \begin{flushleft}
       The frontend makes extensive use of the XMLHttpRequest interface provided 
