--- a/report/report.tex
+++ b/report/report.tex
@@ -155,7 +155,7 @@ so the game may be open to abuse, particularly as all players can send and view 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width = 0.95\textwidth]{screeny}
-\caption{Screenshot of the game interface}
+\caption{Screenshot of the game interface, the green is the map, the grey is off map, the panels to either side of the canvas contain the additional controls and game state information}
 \end{center}
 \end{figure}
 
