cleaned up the language in the conclusion

--- a/report/report.tex
+++ b/report/report.tex
@@ -265,9 +265,8 @@ so the game may be open to abuse, particularly as all players can send and view 
     on.
 
     Also, the game is not terribly pretty. This is entirely down to the lack of
-    artistic skills on the team. We tried more detailed 32px sprites. They
-    looked shit. Then again, Minecraft only has 16px textures, and that's hella
-    popular, so the masses clearly love it.
+    artistic skills on the team. We attempted to make more detailed 32px
+    sprites, however they looked worse than the 16px ones.
   \end{flushleft}
 
 \end{document}
