Final addition to conclusion

--- a/report/report.tex
+++ b/report/report.tex
@@ -259,6 +259,8 @@ so the game may be open to abuse, particularly as all players can send and view 
     by the time the report was written, although the database framework for it
     exists. 
 
+    The economy daemon to alter the number of items available to emulate supply and demand was unimplemented. However it could be done with simple set of SQL  queries.
+
     The combat provided is highly simplistic, just deducting your `shelf' from
     their health. However, as with maps, the framework is there and is easily
     extended to include item/wealth drops, weapons of different ranges, and so
