Added the list of 'concept' things, also section headers

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -24,6 +24,12 @@
 
 \section{Concept}
 \begin{frame}{Concept}
+  \begin{itemize}
+    \item Cross Platform
+    \item Multiple maps
+    \item PvP and PvE combat
+    \item A dynamic economy
+  \end{itemize}
 \end{frame}
 
 \section{Frontend}
@@ -66,9 +72,11 @@
   \end{itemize}
 \end{frame}
 
+\section{Backend}
 \begin{frame}{Backend}
 \end{frame}
 
+\section{Conclusion}
 \begin{frame}{Conclusion}
 \end{frame}
 
