Vague stuff for conclusion slides

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -53,6 +53,7 @@
       \end{itemize}
   \end{itemize}
 \end{frame}
+
 \begin{frame}{Choice of Technology}
   \begin{itemize}
     \item SVG
@@ -75,7 +76,19 @@
 \end{frame}
 
 \section{Conclusion}
-\begin{frame}{Conclusion}
+\begin{frame}{Successes}
+  \begin{itemize}
+    \item Framework for expansion
+    \item Learnt a great deal
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Still To Do}
+  \begin{itemize}
+    \item Dynamic economy
+    \item Deeper combat
+    \item Improved art
+  \end{itemize}
 \end{frame}
 
 \end{document}
