Basic slide about the backend

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -73,6 +73,10 @@
 
 \section{Backend}
 \begin{frame}{Backend}
+  \begin{itemize}
+    \item PostgreSQL for permanent storage
+    \item SystemV shared memory for temporary
+  \end{itemize}
 \end{frame}
 
 \section{Conclusion}
