Really vague intro/renderer additions

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -18,6 +18,11 @@
 
 \section{Introduction}
 \begin{frame}{Introduction}
+  Aims:
+    \begin{itemize}
+      \item Make a game
+      \item Learn stuff
+    \end{itemize}
 \end{frame}
 
 \section{Concept}
@@ -69,6 +74,13 @@
         \item Who cares
       \end{itemize}
   \end{itemize}
+\end{frame}
+
+\begin{frame}{Procedural Background}
+  \begin{enumerate}
+    \item Generate 16 small tiles
+    \item Distribute them to make larger background
+  \end{enumerate}
 \end{frame}
 
 \section{Backend}
