added slide and notes for the procedural background

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -78,10 +78,15 @@
 
 \begin{frame}{Procedural Background}
   \begin{enumerate}
-    \item Generate 16 small tiles
+    \item Make 16 small temporary tiles
+    \item Generate a texture for each
     \item Distribute them to make larger background
   \end{enumerate}
 \end{frame}
+\begin{flushleft}
+  Why make the background procedural? Because it was a) a demonstration of some uses of canvas, and b) it was cool.
+  Could easily be repurposed to generate procedural textures for other things.
+\end{flushleft}
 
 \section{Backend}
 \begin{frame}{Backend}
