Changes to the report

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -21,7 +21,7 @@
   Aims:
     \begin{itemize}
       \item Make a game
-      \item Learn stuff
+      \item Learn web development skills
     \end{itemize}
 \end{frame}
 
@@ -71,7 +71,7 @@
       \begin{itemize}
         \item HTML5/Javascript
         \item Few mature libraries
-        \item Who cares
+        \item Upcoming technology
       \end{itemize}
   \end{itemize}
 \end{frame}
@@ -91,6 +91,7 @@
 \section{Backend}
 \begin{frame}{Backend}
   \begin{itemize}
+    \item PHP for server logic
     \item PostgreSQL for permanent storage
     \item SystemV shared memory for temporary
   \end{itemize}
@@ -99,7 +100,8 @@
 \section{Conclusion}
 \begin{frame}{Successes}
   \begin{itemize}
-    \item Framework for expansion
+    \item Accomplished the specification goals
+    \item Framework for further expansion
     \item Learnt a great deal
   \end{itemize}
 \end{frame}
@@ -109,6 +111,7 @@
     \item Dynamic economy
     \item Deeper combat
     \item Improved art
+    \item Performance
   \end{itemize}
 \end{frame}
 
